fix: miniumum font size text still wrapping on small containers

--- a/src/pack/Category/_category.scss
+++ b/src/pack/Category/_category.scss
@@ -17,7 +17,8 @@
     border: none;
   }
   &__deleteButton {
-    padding-right: 20px;
+    font-family: Alata;
+    padding-right: 25px;
     cursor: pointer;
     border: none;
     background-color: transparent;
